--- a/app/app.css
+++ b/app/app.css
@@ -13,6 +13,7 @@ html,
 body {
   @apply bg-white dark:bg-gray-950;
   font-optical-sizing: auto;
+  scroll-behavior: smooth;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
